intégration de template

--- a/templates/loaderTemplate.html.twig
+++ b/templates/loaderTemplate.html.twig
@@ -3,15 +3,15 @@
 
 
 
-{% block navbar %}
+{% block topbar %}
 
-    {{ render(controller('App\\Controller\\IndexController::topbar')) }}
+    {{ render(controller('App\\Controller\\TemplateController::topbar')) }}
     {#    {{ include('user/aside.html.twig') }} #}
 {% endblock %}
 
 
-{% block asidebar %}
-    {{ render(controller('App\\Controller\\IndexController::asidebar')) }}
+{% block aside %}
+    {{ render(controller('App\\Controller\\TemplateController::aside')) }}
     {#   {{ include('user/top.html.twig') }} #}
 {% endblock %}
 
@@ -19,6 +19,6 @@
 
 
 {% block footerbar  %}
-    {{ render(controller('App\\Controller\\IndexController::footerbar')) }}
+    {{ render(controller('App\\Controller\\TemplateController::footerbar')) }}
     {#   {{ include('user/top.html.twig') }} #}
 {% endblock %}
