--- a/templates/template/index.html.twig
+++ b/templates/template/index.html.twig
@@ -1,30 +1,19 @@
-{% extends 'loaderTemplate.html' %}
+{% extends 'loaderTemplate.html.twig' %}
 
-{% block title %}Hello TemplateController!{% endblock %}
+{% block title %}Dashboard!{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block main %}
+    <!-- Page Heading -->
+    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
+    </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <!-- Content Row -->
+    <div class="row">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/laragon/www/restrendevous/src/Controller/TemplateController.php'|file_link(0) }}">src/Controller/TemplateController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/laragon/www/restrendevous/templates/template/index.html.twig'|file_link(0) }}">templates/template/index.html.twig</a></code></li>
-    </ul>
-</div>
+        hello!
 
-    <table>
-        {% for route in routes %}
-            <tr>
-                <td>{{ route.path }}</td>
-                <td>{{ route.methods|length > 0 ? route.methods|join(', ') : 'ANY' }}</td>
-                <td>{{ route.defaults._controller }}</td>
-            </tr>
-        {% endfor %}
-    </table>
+    </div>
+
 {% endblock %}
