--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <title>startbootstrap-sb-admin-2-gh-pages | Facture</title>
+   <title> {% block title %}{% endblock %}</title>
     <link rel="stylesheet"
           href="{{ asset('startbootstrap-sb-admin-2-gh-pages/vendor/fontawesome-free/css/all.min.css') }}"
           type="text/css"/>
