--- a/templates/demandeur/new.html.twig
+++ b/templates/demandeur/new.html.twig
@@ -1,11 +1,29 @@
-{% extends 'base.html.twig' %}
+{% extends 'loaderTemplate.html.twig' %}
 
-{% block title %}New Demandeur{% endblock %}
+{% block title %}Demandeur |Rendez-vous{% endblock %}
 
-{% block body %}
-    <h1>Create new Demandeur</h1>
+{% block main %}
 
-    {{ include('demandeur/_form.html.twig') }}
+<div class="col-xl-8 col-lg-7">
+    <div class="card shadow mb-4">
+        <!-- Card Header - Dropdown -->
+        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+            <h6 class="m-0 font-weight-bold text-primary">Ajouter un DemandeurA</h6>
+            <div class="dropdown no-arrow">
+                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                    <div class="dropdown-header">Dropdown Header:</div>
+                </div>
+            </div>
+        </div>
+        <!-- Card Body -->
+        <div class="card-body">
 
-    <a href="{{ path('demandeur_index') }}">back to list</a>
+           {{ include('demandeur/_form.html.twig') }}
+        </div>
+    </div>
+</div>
+
 {% endblock %}
