--- a/templates/commisariat/edit.html.twig
+++ b/templates/commisariat/edit.html.twig
@@ -1,13 +1,32 @@
-{% extends 'base.html.twig' %}
+{% extends 'loaderTemplate.html.twig' %}
 
-{% block title %}Edit Commisariat{% endblock %}
+{% block title %}Commisariat|Rendez-vous{% endblock %}
 
-{% block body %}
-    <h1>Edit Commisariat</h1>
+{% block main %}
 
-    {{ include('commisariat/_form.html.twig', {'button_label': 'Update'}) }}
+<div class="col-xl-8 col-lg-7">
+    <div class="card shadow mb-4">
+        <!-- Card Header - Dropdown -->
+        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+            <h6 class="m-0 font-weight-bold text-primary">Modifier les informations d'un Commisariat</h6>
+            <div class="dropdown no-arrow">
+                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                    <div class="dropdown-header">Dropdown Header:</div>
+                </div>
+            </div>
+        </div>
+        <!-- Card Body -->
+        <div class="card-body">
 
-    <a href="{{ path('commisariat_index') }}">back to list</a>
+            {{ include('commisariat/_form.html.twig', {'button_label': 'Update'}) }}
 
-    {{ include('commisariat/_delete_form.html.twig') }}
+            <a href="{{ path('commisariat_index') }}">back to list</a>
+
+            {{ include('commisariat/_delete_form.html.twig') }}
+        </div>
+    </div>
+</div>
 {% endblock %}
