--- a/templates/demandeur/index.html.twig
+++ b/templates/demandeur/index.html.twig
@@ -1,9 +1,28 @@
-{% extends 'base.html.twig' %}
+{% extends 'loaderTemplate.html.twig' %}
 
-{% block title %}Demandeur index{% endblock %}
+{% block title %}Demandeur |Rendez-vous{% endblock %}
 
-{% block body %}
-    <h1>Demandeur index</h1>
+{% block main %}
+
+<div class="col-xl-8 col-lg-7">
+    <div class="card shadow mb-4">
+        <!-- Card Header - Dropdown -->
+        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+            <h6 class="m-0 font-weight-bold text-primary">Ajouter un Demandeur </h6>
+            <div class="dropdown no-arrow">
+                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                    <div class="dropdown-header">Dropdown Header:</div>
+                </div>
+            </div>
+        </div>
+        <!-- Card Body -->
+        <div class="card-body">
+            <!-- Content Row -->
+            <div class="row">
+                <h1>Demandeur Index</h1>
 
     <table class="table">
         <thead>
@@ -38,4 +57,9 @@
     </table>
 
     <a href="{{ path('demandeur_new') }}">Create new</a>
+
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
