--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,10 +54,11 @@
                     <span aria-hidden="true">×</span>
                 </button>
             </div>
-            <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+            <div class="modal-body">Sélectionnez «Déconnexion» ci-dessous si vous êtes
+                prêt à mettre fin à votre session en cours.</div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                <a class="btn btn-primary" href="login.html">Logout</a>
+                <a class="btn btn-primary" href="{{ path('app_login') }}">Se déconnecter</a>
             </div>
         </div>
     </div>
