--- a/templates/agent/edit.html.twig
+++ b/templates/agent/edit.html.twig
@@ -5,7 +5,7 @@
 {% block main %}
 
 <div class="col-xl-8 col-lg-7">
-    <div class="card shadow mb-4">
+    <div class="card bg-success text-white shadow mb-4">
         <!-- Card Header - Dropdown -->
         <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
             <h6 class="m-0 font-weight-bold text-primary">Edite un Agent</h6>
@@ -22,7 +22,7 @@
         <div class="card-body">
     {{ include('agent/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('agent_index') }}">back to list</a>
+    <a class="btn-primary" href="{{ path('agent_index') }}"><i class="fa fa-list"></i> Liste</a>
 
     {{ include('agent/_delete_form.html.twig') }}
         </div>
