--- a/templates/agent/new.html.twig
+++ b/templates/agent/new.html.twig
@@ -5,7 +5,7 @@
 {% block main %}
 
     <div class="col-xl-8 col-lg-7">
-        <div class="card shadow mb-4">
+        <div class="card  bg-success text-white shadow mb-4">
             <!-- Card Header - Dropdown -->
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                 <h6 class="m-0 font-weight-bold text-primary">Ajouter un Agent</h6>
