--- a/templates/agent/show.html.twig
+++ b/templates/agent/show.html.twig
@@ -5,10 +5,10 @@
 {% block main %}
 
 <div class="col-xl-8 col-lg-7">
-    <div class="card shadow mb-4">
+    <div class="card bg-success text-white shadow mb-4">
         <!-- Card Header - Dropdown -->
         <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-            <h6 class="m-0 font-weight-bold text-primary">Ajouter un Agent</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Détailes un Agent</h6>
             <div class="dropdown no-arrow">
                 <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
