--- a/templates/prendre/index.html.twig
+++ b/templates/prendre/index.html.twig
@@ -1,9 +1,25 @@
-{% extends 'base.html.twig' %}
+{% extends 'loaderTemplate.html.twig' %}
 
-{% block title %}Prendre index{% endblock %}
+{% block title %}Prendre|Rende-vous{% endblock %}
 
-{% block body %}
-    <h1>Prendre index</h1>
+{% block main %}
+
+<div class="col-xl-8 col-lg-7">
+    <div class="card bg-light text-white shadow mb-4">
+        <!-- Card Header - Dropdown -->
+        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+            <h6 class="m-0 font-weight-bold text-primary">Listes des  Rende-vous</h6>
+            <div class="dropdown no-arrow">
+                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                    <div class="dropdown-header">Dropdown Header:</div>
+                </div>
+            </div>
+        </div>
+        <!-- Card Body -->
+        <div class="card-body">
 
     <table class="table">
         <thead>
@@ -17,17 +33,23 @@
             <tr>
                 <td>{{ prendre.id }}</td>
                 <td>
-                    <a href="{{ path('prendre_show', {'id': prendre.id}) }}">show</a>
-                    <a href="{{ path('prendre_edit', {'id': prendre.id}) }}">edit</a>
+                    <a class="bg-light" href="{{ path('prendre_show', {'id': agent.id}) }}"><i class="fa fa-eye"></i> </a>
+                    <a class="bg-primary" href="{{ path('prendre_edit', {'id': agent.id}) }}"><i class="fa fa-edit"></i> </a>
+
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="2">no records found</td>
+                <td colspan="2">Aucun enregistrement trouvé</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('prendre_new') }}">Create new</a>
+    <a class="btn btn-success" href="{{ path('prendre_new') }}"><i class="fa fa-plus"></i> Ajouter</a>
+
+        </div>
+    </div>
+</div>
 {% endblock %}
+
