--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>startbootstrap-sb-admin-2-gh-pages | Facture</title>
+    <title>Connexion</title>
     <link rel="stylesheet"
           href="{{ asset('startbootstrap-sb-admin-2-gh-pages/vendor/fontawesome-free/css/all.min.css') }}"
           type="text/css"/>
