--- a/fichiers/base_de_donnees.html.twig
+++ b/fichiers/base_de_donnees.html.twig
@@ -3,14 +3,6 @@
 [Champ: id, NomCom, AdresCom]
 [Fin Table: Commisariat]
 
-[Table: Demandeur]
-[Champ: id, NomsDem, DateNaissDem, TelDem, AdresDem]
-[Fin Table: Demandeur]
-
-[Table: Agent]
-[Champ: id, NomsAge, TelAge]
-[Fin Table: Agent]
-
 [Table: Calendrier]
 [Champ: id, Date ]
 [Fin Table: Calendrier]
@@ -18,11 +10,14 @@
 
 [Relation]
 
-1-  [Table: Commisariat] [1,n]-------------------------- [1,1] [Table: Agent]
+1-  [Table: Commisariat] [1,n]-------------------------- [1,1] [Table: Agent (user)]
 
 
 
 2-  [Table: Demandeur] [1,n]----------------------------- [1,n] [Table: Agent]
                                 [1,n] [Table: Calendrier]
+id= 1
+id_agent = 2
+id_dem = 3
 [Fin Relation]
 [ Fin Base de donnees: GestRendeVous]
