--- a/templates/prendre/_form.html.twig
+++ b/templates/prendre/_form.html.twig
@@ -2,5 +2,5 @@
 <div class="form-group">
     {{ form_widget(form,{'class':'form-control'}) }}
 </div>
-<button class="btn btn-success"><i class="fa fa-plus"></i> {{ button_label|default('Ajouter') }}</button>
+<button class="btn btn-primary"><i class="fa fa-plus"></i> {{ button_label|default('Ajouter') }}</button>
 {{ form_end(form) }}
