--- a/templates/topbar.html.twig
+++ b/templates/topbar.html.twig
@@ -1,5 +1,8 @@
 <!-- Topbar -->
-<nav class="navbar navbar-expand navbar-light  bg-secondary topbar mb-4 static-top shadow" >
+<nav class="navbar navbar-expand navbar-light  topbar mb-4 static-top shadow"
+
+style="background-color: white"
+>
 
     <!-- Sidebar Toggle (Topbar) -->
     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
