--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,35 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    {#{{ form_widget(form) }}#}
+<div class="form-group ">
+    {{ form_row(form.lastName) }}
+    {{ form_row(form.firstName) }}
+</div>
+<div class="form-group">
+    {{ form_row(form.tel) }}
+    {{ form_row(form.sexe) }}
+</div>
+<div class="form-group ">
+    {{ form_row(form.email) }}
+    {{ form_row(form.username) }}
+</div>
+<div class="form-group">
+    {{ form_row(form.adresse) }}
+</div>
+{% if commissariat is not empty %}
+<div class="form-group">
+    <label class="commissariat">commissariat</label>
+    <select name="commissariat" class="form-control">
+        {% for item in commissariat %}
+            <option value="{{ item.id }}">{{ item.nom }}</option>
+        {% endfor %}
+    </select>
+</div>
+{% endif %}
+<div class="form-group">
+    {{ form_row(form.plainPassword) }}
+</div>
+
+
+<button class="btn btn-success"><i class="fa fa-plus"></i> {{ button_label|default('Ajouter') }}</button>
+
 {{ form_end(form) }}
