--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,13 +1,34 @@
-{% extends 'base.html.twig' %}
+{% extends 'loaderTemplate.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Agent|Rendez-vous{% endblock %}
 
-{% block body %}
-    <h1>Edit User</h1>
+{% block main %}
+
+<div class="col-xl-8 col-lg-7">
+    <div class="card bg-success text-white shadow mb-4">
+        <!-- Card Header - Dropdown -->
+        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+            <h6 class="m-0 font-weight-bold text-primary">Modifier les informations d'un Agent</h6>
+            <div class="dropdown no-arrow">
+                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                    <div class="dropdown-header">Dropdown Header:</div>
+                </div>
+            </div>
+        </div>
+        <!-- Card Body -->
+        <div class="card-body">
 
     {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('user_index') }}">back to list</a>
-
     {{ include('user/_delete_form.html.twig') }}
+            <a class="btn-primary" href="{{ path('user_index') }}"><i class="fa fa-list"></i> Liste</a>
+
+        </div>
+    </div>
+</div>
 {% endblock %}
+
+
