--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -34,6 +34,11 @@
                 <div class="text-center">
                   <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                 </div>
+                {% if form_errors(form)|length > 0 %}
+                  {% for error in form_errors(form) %}
+                    <span style="color:red;"> {{ error.message }}</span>
+                  {% endfor %}
+                {% endif %}
                 <form id="register_form" action="{{ path('register') }}" method="post">
                   <div class="form-group form-inline">
                     {{ form_row(form.lastName) }}
@@ -51,7 +56,6 @@
                     {{ form_row(form.plainPassword) }}
                   </div>
                   <div class="form-group form-inline">
-                    {{ form_row(form.dialcode) }}
                     {{ form_row(form.adresse) }}
                   </div>
 
@@ -122,3 +126,4 @@
 {% block javascripts %}{% endblock %}
 </body>
 </html>
+
